# finance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
.github/workflows/: claude.yml  dbt-ci.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_account.sql  dim_category.sql  dim_date.sql  fct_transactions.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_nordea_transactions.sql  stg_nordea_transactions.yml
dbt_project/seeds/: category_mappings.csv
docs/: POWER_BI_SETUP.md
scripts/: dashboard.py  export_to_powerbi.py  load_nordea.py
