[project]
name = "finance"
version = "0.1.0"
description = "Personal finance tracking and reporting with DuckDB and dbt"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
    "duckdb>=0.9",
    "pydantic>=2.0",
    "streamlit>=1.28",
    "plotly>=5.17",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
